--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: TAPAS
-url: "https://tapas-ai.github.io"
+url: "https://tapas-ai.org"
 baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
