--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: TAPAS
 url: "https://tapas-ai.org"
-baseurl:
+baseurl: "/tapas-ai.org"
 google_analytics_key:
 google_maps_javascript_api_key:
 disqus_shortname:
