--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 # Site
 
 title: TAPAS
-url: "https://tapas-ai.org"
-baseurl: "/tapas-ai.org"
+url: "https://tapas-ai.github.io"
+baseurl: '/tapas-ai.github.io'
 google_analytics_key:
 google_maps_javascript_api_key:
 disqus_shortname:
