--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: TAPAS
 url: "https://tapas-ai.github.io"
-baseurl: '/tapas-ai.github.io'
+baseurl: 
 google_analytics_key:
 google_maps_javascript_api_key:
 disqus_shortname:
